[package]
name = "sc-block-builder-ver"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate block builder"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
aquamarine = "0.1.12"
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "3.6.1", features = [
	"derive",
] }
sc-client-api = { version = "4.0.0-dev", path = "../api" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
sp-block-builder = { version = "4.0.0-dev", path = "../../primitives/block-builder" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-core = { version = "21.0.0", path = "../../primitives/core" }
sp-inherents = { version = "4.0.0-dev", path = "../../primitives/inherents" }
sp-runtime = { version = "24.0.0", path = "../../primitives/runtime" }
sp-ver = { version = "4.0.0-dev", path = "../../primitives/ver" }
ver-api = { path='../../primitives/ver-api', version='4.0.0-dev' }
extrinsic-shuffler = { path='../../primitives/shuffler', version='4.0.0-dev' }

[dev-dependencies]
sp-state-machine = { version = "0.28.0", path = "../../primitives/state-machine" }
substrate-test-runtime-client = { path = "../../test-utils/runtime/client" }
