[package]
name = "sp-encrypted-tx"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Transaction pool primitives types & Runtime API."
documentation = "https://docs.rs/sp-transaction-pool"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
thiserror = "1.0.21"
serde = { version = "1.0.126", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime"}
sp-core = { version = "4.0.0-dev", default-features = false, path = "../../primitives/core"}
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../primitives/api"}
sp-std = { version = "4.0.0-dev", default-features = false, path = "../../primitives/std"}
sp-consensus-babe = { version = "0.10.0-dev", default-features = false, path = "../../primitives/consensus/babe"}
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support"}
sp-inherents = { version = "4.0.0-dev", default-features = false , path = "../../primitives/inherents"}

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-api/std",
	"sp-std/std",
	"frame-support/std",
	"sp-consensus-babe/std",
	"serde",
]
